<resources>
    <string name="app_name" translatable="false">KSA Free Wifi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="registration_button">Register</string>
    <string name="google_client_id">701065953910-ua0p0sl83t7r04n0fh317p17pnpfouem.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2495789184045739</string>
    <string name="fb_login_protocol_scheme">fb2495789184045739</string>
    <string name="registration_label">Registration</string>
    <string name="sign_in_label">Sign In</string>
    <string name="submit_label">Submit</string>
    <string name="next_label">Next</string>
    <string name="mbps_label" translatable="false">%s Mbps</string>
    <string name="loading_label">Loading…</string>
    <string name="under_construction_label">Work in progress…</string>
    <string name="press_back_again_label">Press back again to exit</string>
    <string name="gps_enable_conformation">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="share_hotspot_data">Get free access to our public Wi-Fi at %s, by %s, in %s</string>
    <string name="monitoring_wifi" translatable="false">Monitoring Wifi</string>
    <string name="no_internet_connection_error">No Internet Connection</string>
    <string name="something_went_wrong_error">Something went wrong</string>
    <string name="search_locations_label">Search Locations</string>
    <string name="empty_query_alert_label">Please enter a query</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="email_id_label">Email Id</string>
    <string name="country_code_label">Country Code</string>
    <string name="mobile_number_label">Mobile Number</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="captcha_label">Enter the captcha shown below</string>
    <string name="accept_terms_and_condition_label">You need to accept Terms and Conditions to continue</string>
    <string name="password_format_str">Password Must Contain 8-32 characters One upper case letter,
        One lower case letter,
        Decimal digits(0-9),
        Special character (@, $ !, %, *, ?, &amp;, #) </string>
    <string name="password_format">Please enter a valid password </string>
    <string name="select_country_code_error_msg">Please select Country code!</string>
    <string name="email_required_label">Email field is required</string>
    <string name="password_required_label">Password field is required</string>
    <string name="first_name_required_label">First Name field is required</string>
    <string name="my_profile_label">My Profile</string>
    <string name="update_profile_label">Update Profile</string>
    <string name="retrieving_profile_details_label">Retrieving Profile Info…</string>
    <string name="updating_profile_label">Updating Profile Info…</string>
    <string name="logout_label">Logout</string>
    <string name="logout_confirm"> Are you sure you want to logout?</string>
    <string name="verify_account_label">Verify Account</string>
    <string name="verification_method_label">Please Select Option  To Verify Your Account</string>
    <string name="otp_sms_label">Verfiy OTP using SMS</string>
    <string name="email_link_label">Verify OTP using Email</string>
    <string name="email_verification_label">Email verification</string>
    <string name="link_sent_label">A verification link has been sent to %s</string>
    <string name="check_email_label">Please check your email &amp; follow the link to activate your account</string>
    <string name="resend_link_label">Resend link?</string>
    <string name="mobile_no_verification_label">Mobile number verification</string>
    <string name="otp_sent_label">Please enter OTP sent to %s</string>
    <string name="resend_label">Resend</string>
    <string name="verification_label">Verification</string>
    <string name="already_registered_label">You have already registered with</string>
    <string name="complete_registration_label">Complete your registration by selecting below option</string>
    <string name="invalid_otp_label">Invalid OTP</string>
    <string name="welcome">Welcome</string>
    <string name="userName">Username</string>
    <string name="userpassword">Password</string>
    <string name="captchmsg">Enter the message shown below</string>
    <string name="submit_button">Submit</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="email_id_hint">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_captcha">Enter captcha</string>
    <string name="login_credentials_msg">Login to the portal with your credentials</string>
    <string name="connecting_kingdom_label">Connecting the \n Kingdom of Saudi Arabia…!</string>
    <string name="reviews_and_complaint">Reviews &amp; Complaints</string>
    <string name="reviews_label">Reviews</string>
    <string name="complaint_label">Complaints</string>
    <string name="all_label">All</string>
    <string name="confirm_complaint">Do you want to submit your complaint?</string>
    <string name="confirm_review">Do you want to submit your rating?</string>
    <string name="discard_review">Do you want to discard your review? </string>
    <string name="discard_complaint">Do you want to discard your complaint? </string>
    <string name="favoutite_wifi_label">Favourites</string>
    <string name="speed_test_label">Speed Test</string>
    <string name="users_connected_label">Users Connected</string>
    <string name="go_label">Go</string>
    <string name="download_speed_label">Download Speed</string>
    <string name="retest_label">Retest</string>
    <string name="wifi_disabled_label">Wifi Disabled</string>
    <string name="wifi_enable_conformation">Your wifi seems to be disabled, do you want to enable it?</string>
    <string name="network_not_validated_label">The current network does not belong to \n KSA Free Wifi</string>
    <string name="wifi_not_validated_label">The current wifi does not belong to KSA Free Wifi</string>
    <string name="error_while_calculating_download_speed">Error occurred while calculating download speed</string>
    <string name="speed_test_result_label">Speed Test Result</string>
    <string name="download_label">Download</string>
    <string name="comment_and_evaluate_label">Comment and Evaluate</string>
    <string name="rate_wifi_label">Rate Wifi</string>
    <string name="empty_log_list_label">No logs found</string>
    <string name="wifi_log_list_label">Wifi Log List</string>
    <string name="wifi_log_label">Wifi Log</string>
    <string name="date_label">Date</string>
    <string name="name_label">Name</string>
    <string name="date_wifi_log_label">Date: %s</string>
    <string name="connection_logs_label">Connection Logs</string>
    <string name="speed_test_logs_label">Speed test Logs</string>
    <string name="start_time_label">Start time</string>
    <string name="end_time_label">End time</string>
    <string name="wifidate">Date: </string>
    <string name="add_remarks_label">Add your feedback here</string>
    <string name="cancel_label">Cancel</string>
    <string name="submit_feedback_label">Submit Feedback</string>
    <string name="enter_remark_error_label">Please provide feedback</string>
    <string name="provide_rating_label">Please provide a rating</string>
    <string name="explain_problem_label">Explain your problem in detail here</string>
    <string name="raise_complaint_label">Raise Complaint</string>
    <string name="select_issue_type_label">Select issue type</string>
    <string name="please_select_issue_type_label">Please Select issue type</string>
    <string name="wifi_service_label">WiFi Service</string>
    <string name="wifi_connected_label">WiFi Connected</string>
    <string name="wifi_disconnected_label">WiFi Disconnected</string>
    <string name="checking_wifi_connection_label">Checking for wifi connection</string>
    <string name="calculating_wifi_speed_label">"WiFi connected : %s, Speed : Calculating…"</string>
    <string name="calculated_wifi_speed_label">"WiFi connected : %s, Speed : %s Mbps"</string>
    <string name="no_internet_connection_label">"No Internet Connection"</string>
    <string name="login_required">Login Required</string>
    <string name="need_to_login">You need to login to access this feature</string>
    <string name="provide_location_permission_label">You need to provide Location/GPS permission for this app to run smoothly</string>
    <string name="open_label">Open</string>
    <string name="maps_api_key" translatable="false">AIzaSyAyKP89tXni4J32JCJw60dVTShBXqR_ieU</string>
    <string name="searchplace">Search</string>
    <string name="permission_description">Lorem ipsum dolor sit amet, ua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="agree_terms">I Agree</string>
    <string name="enter_register_mobile">Enter your mobile number</string>
    <string name="back_to_login_msg">Back to login screen</string>
    <string name="enter_register_email">Enter  your registered email id</string>
    <string name="change_password">Change Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btTextNavigateNow">Navigate Now</string>
    <string name="btTextComment"><![CDATA[Comment & Evaluate]]></string>
    <string name="btTextRateWifi">Rate Wifi</string>
    <string name="wifi_name">Wifi Name</string>
    <string name="issue_type">Issue type</string>
    <string name="login_hotspot_msg">Don\'t have an account with KSA Free Wifi?</string>
    <string name="get_started_msg">GET STARTED NOW!</string>
    <string name="invalid_email">Invalid User Name</string>
    <string name="verify_link_msg">"A verification link has been sent to "</string>
    <string name="ok_label">OK</string>
    <string name="completeRegistration">Complete your registration by resending the link</string>
    <string name="first_last_name_label">Firstname           Lastname</string>
    <string name="enter_confirm_password">Re-enter password</string>
    <string name="sign_agree_msg">By signing up  you agree to the  </string>
    <string name="terms_condition"><u>Accept Terms &amp; Conditions</u></string>
    <string name="get_started">" Register "</string>
    <string name="or">OR</string>
    <string name="otp_title">Please enter OTP sent to</string>
    <string name="resend_otp_label">RESEND OTP</string>
    <string name="btn_verify">VERIFY</string>
    <string name="receive_otp">Didn\'t receive OTP?</string>
    <string name="loginHeaderName">Hotspot</string>
    <string name="loginHeaderNameSub">Connecting world...!</string>
    <string name="navigate_label">NAVIGATING</string>
    <string name="navigate_now_label">NAVIGATE</string>
    <string name="register_with_us">Register With Us</string>
    <string name="skip">SKIP</string>
    <string name="otp_label">OTP</string>
    <string name="recently_search_label">Recent  Search</string>
    <string name="rate_now_label">RATE WIFI</string>
    <string name="arabic">عربى</string>
    <string name="english">English</string>
    <string name="setting_title_label">You are sure you want to save the settings.</string>
    <string name="setting_saving_msg">lorem lpsum is simply dummy text of the  printing and typesetting industries. Lorem</string>
    <string name="no_label">NO</string>
    <string name="yes_label">YES</string>
</resources>