<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ey.hotspot.ui.login.login_fragment.LoginFragmentViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".ui.login_selection.LoginSelectionActivity">




        <LinearLayout
            android:background="@drawable/ic_login_header"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="200dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginHeaderName"
                android:gravity="center"
                android:textSize="@dimen/txt_size_45"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_gravity="center"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginHeaderNameSub"
                android:gravity="center"
                android:textSize="@dimen/txt_size_14"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_60"
                android:text="@string/welcome"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_20"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"/>



        </LinearLayout>

        
        <TextView
            android:id="@+id/tvWelcome"
            style="@style/TextAppearance.MyApp.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:text="@string/login_credentials_msg" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_40"
            android:gravity="top|start"
            app:startIconTint="@color/colorPrimarySub"

            app:boxBackgroundColor="@color/colorWhite"
            app:boxCornerRadiusBottomEnd="@dimen/margin_12"
            app:boxCornerRadiusBottomStart="@dimen/margin_12"
            app:boxCornerRadiusTopEnd="@dimen/margin_12"
            app:boxCornerRadiusTopStart="@dimen/margin_12"
            app:hintTextColor="@color/colorGrayLight"
            app:placeholderText="@string/email_id_hint"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/email_id_label"
                android:text="@={viewModel.emailId}"
                android:inputType="textEmailAddress"
                android:maxLength="120"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_40"
            app:boxBackgroundColor="@color/colorWhite"
            app:boxCornerRadiusBottomEnd="@dimen/margin_12"
            app:boxCornerRadiusBottomStart="@dimen/margin_12"
            app:boxCornerRadiusTopEnd="@dimen/margin_12"
            app:boxCornerRadiusTopStart="@dimen/margin_12"
            app:passwordToggleEnabled="true"
            app:startIconTint="@color/colorPrimarySub"

            app:placeholderText="@string/enter_password"
            app:hintTextColor="@color/colorGrayLight"
            app:startIconDrawable="@drawable/baseline_lock_black_36">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/userpassword"
                android:text="@={viewModel.password}"
                    android:inputType="textPassword"
                android:maxLength="120"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/btn_forgot_password"
            style="@style/TextAppearance.MyApp.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/margin_40"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_40"
            android:text="@string/forgotpassword" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_30"
            android:paddingBottom="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10"
            android:paddingStart="@dimen/margin_60"
            android:paddingEnd="@dimen/margin_60"
            android:text="@string/sign_in_label"
            android:background="@drawable/sign_btn_gradient"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_15" />


        </LinearLayout>
        <TextView
            style="@style/TextAppearance.MyApp.Headline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:text="@string/login_hotspot_msg" />



        <TextView
            android:id="@+id/tvGetStartedNow"
            style="@style/TextAppearance.MyApp.Headline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:textColor="@color/colorPrimarySub"
            android:text="@string/get_started_msg" />

    </LinearLayout>

</layout>