<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context=".ui.login_selection.LoginSelectionActivity">


        <TextView
            android:id="@+id/tvWelcome"
            style="@style/TextAppearance.MyApp.Headline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_50"
            android:gravity="center"
            android:text="@string/permission_description" />





        <CheckBox
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_20"
            android:id="@+id/simpleCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_terms"/>



            <Button
                android:id="@+id/btSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_button"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_15"
                android:textDirection="locale"
                android:layout_marginTop="@dimen/margin_20"
                style="@style/Widget.AppCompat.Button.Colored"/>



    </LinearLayout>

</layout>