<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin_20"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_rounded_layout"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleSettings"
        style="@style/TextAppearance.MyApp.Headline3_Profile_Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        android:textDirection="locale"

        android:text="@string/setting_title_label" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:textDirection="locale"

        android:text="@string/setting_saving_msg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btYes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_30"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@drawable/sign_btn_gradient"
            android:gravity="center"
            android:paddingStart="@dimen/margin_20"
            android:paddingEnd="@dimen/margin_20"
            android:text="@string/yes_label"
            android:textDirection="locale"
            android:textColor="@color/colorWhite" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btNo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_30"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@drawable/sign_btn_gradient"
            android:paddingStart="@dimen/margin_20"
            android:paddingEnd="@dimen/margin_20"
            android:text="@string/no_label"
            android:textDirection="locale"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</LinearLayout>