<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/common_padding_start"
        android:paddingTop="@dimen/common_padding_top"
        android:paddingEnd="@dimen/common_padding_end"
        tools:context=".ui.registration.email_verification.EmailVerificationFragment">

        <!--    Email image  -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_email"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/common_margin_top"
            android:src="@drawable/ic_baseline_email_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        Email verification label-->
        <TextView
            android:id="@+id/tv_email_verification_label"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top"
            android:gravity="center"
            android:text="@string/verification_method_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_email" />

        <!--        link sent label-->
        <TextView
            android:id="@+id/tv_link_sent_label"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top"
            android:gravity="center"
            android:text="@string/link_sent_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_verification_label" />

        <!--        check email label-->
        <TextView
            android:id="@+id/tv_check_email_label"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top"
            android:gravity="center"
            android:text="@string/check_email_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_link_sent_label" />

        <!--        resend link label-->
        <TextView
            android:id="@+id/tv_resend_link_label"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top"
            android:gravity="center"
            android:text="@string/resend_link_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_check_email_label" />

        <!--    check image  -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_check"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/common_margin_top"
            android:src="@drawable/ic_baseline_check_circle_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_resend_link_label" />

        <!--Sign In-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_top"
            android:text="@string/sign_in_label"
            app:layout_constraintVertical_bias="1"
            android:layout_marginBottom="@dimen/common_margin_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>